test/spec_vectors/simd_f32x4_cmp/fail/module_15.wat
(module (func $f32x4.eq-arg-empty (result v128) (f32x4.eq)))